# TriLibGO

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  run_stage1_rl.cmd  run_stage1_rl.sh  run_stage2_curriculum_rl.cmd  run_stage2_curriculum_rl.sh  run_stage2_rl.cmd  run_stage2_rl.sh  run_stage3_rl.cmd  run_stage3_rl.sh  run_stage4_rl.cmd  run_stage4_rl.sh  run_stage5_side3_rl.cmd  run_stage5_side3_rl.sh
.github/workflows/: release.yml
docs/: board-rules.md  design.md
include/trilibgo/ai/: agent.h  analysis_model.h  feature_encoder.h  onnx_analysis_model.h  random_agent.h
include/trilibgo/app/: board_widget.h  game_controller.h  main_window.h
include/trilibgo/core/: board_topology.h  game_record.h  game_state.h  rules_engine.h  types.h
python/: __init__.py  environment-train.yml  requirements-train.txt
python/rl/: README.md  __init__.py  analysis.py  config.py  encoder.py  endgame.py  eval.py  export.py  game.py  mcts.py  model.py  replay_buffer.py  selfplay.py  topology.py  train.py
python/rl/configs/: stage1_cpu_i5_12500h.json  stage2_graph_cpu_i5_12500h.json  stage2_graph_curriculum_cpu_i5_12500h.json  stage2_priority1_cpu_i5_12500h.json  stage3_graph_reset_cpu_i5_12500h.json  stage4_conv_reset_cpu_i5_12500h.json  stage5_side3_cpu_i5_12500h.json  tiny_cpu_baseline.json  tiny_cpu_smoke.json  tiny_cpu_visual_smoke.json
python/rl/tests/: test_aux_targets.py  test_curriculum.py  test_endgame.py  test_model_graph.py  test_priority1.py  test_training_pipeline.py
python/tools/: dump_position_fixtures.py  render_training_report.py  verify_fixtures.py  verify_position_fixtures.py  verify_record.py
python/tools/tests/: test_render_training_report.py
records/: fixtures.json  position_fixture_expectations.json  position_fixtures.json  r1.tgo  r2.tgo
src/ai/: analysis_model.cpp  feature_encoder.cpp  onnx_analysis_model.cpp  random_agent.cpp
src/app/: board_widget.cpp  game_controller.cpp  main.cpp  main_window.cpp  replay_compat.cpp  replay_compat.h
src/core/: board_topology.cpp  game_record.cpp  game_state.cpp  rules_engine.cpp
tests/: core_tests.cpp
